--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /LiveMatch/build/
 /LiveMatch/dist/
 /KarmaLiveMatch/target/
+/JavaFXApplication/nbproject/private/
+/JavaFXApplication/build/
+/JavaFXApplication/dist/
+/JavaFXApplication2/nbproject/private/
